[tool.poetry]
name = "qurama"
version = "0.1.0"
description = ""
authors = ["MarkoM-dot <83985775+MarkoM-dot@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.77.1"
SQLAlchemy = "^1.4.36"
sqlmodel = "^0.0.6"
alembic = "^1.7.7"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
black = "^22.3.0"
flake8 = "^4.0.1"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
