[tool.poetry]
name = "qurama"
version = "0.1.0"
description = ""
authors = ["MarkoM-dot <83985775+MarkoM-dot@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.77.1"
SQLAlchemy = "^1.4.35"
alembic = "^1.7.7"
python-dotenv = "^0.20.0"
aiosqlite = "^0.17.0"
databases = {extras = ["aiosqlite"], version = "^0.5.5"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
httpx = "^0.22.0"
pytest-asyncio = "^0.18.3"
pre-commit = "^2.19.0"
pytest-cov = "^3.0.0"
bandit = "^1.7.4"
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
